# mahalanobis_transformer

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  sample.py  scripts.py  setup.py  study.ipynb
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/modules/: mahalanobis_transformer.rst
mahalanobis_transformer/: __init__.py
tests/: test_mahalanobis_transformer.py
