[tool.poetry]
name = "mahalanobis_transformer"
version = "0.1.0"
description = ""
authors = ["Tetsutaro Maruyama <tetsutaro.maruyama@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.5"
scikit-learn = "^1.2.0"
Sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
