[tool.poetry]
name = "mahalanobis_transformer"
version = "0.1.2"
description = "The transformer that transforms data so to squared norm of transformed data becomes Mahalanobis' distance"
authors = ["Tetsutaro Maruyama <tetsutaro.maruyama@gmail.com>"]
maintainers = ["Tetsutaro Maruyama <tetsutaro.maruyama@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tetutaro/mahalanobis_transformer"
repository = "https://github.com/tetutaro/mahalanobis_transformer"
keywords = ["mahalanobis-distance", "scikit-learn-api"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.5"
scikit-learn = "^1.2.0"

[tool.poetry.dev-dependencies]
Sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "scripts:test"
